add dm benchmarks